--- a/packages/theme/src/scss/components/checkbox/basic.scss
+++ b/packages/theme/src/scss/components/checkbox/basic.scss
@@ -5,7 +5,8 @@
 
 :host {
   display: inline-flex;
-  vertical-align: middle;
+  vertical-align: bottom;
+  flex-shrink: 0;
 }
 
 @include b(checkbox) {
